Fixed build issue for dependency issues.