@@ -482,8 +482,8 @@ public class WholeEggService {
     @Transactional(readOnly = true)
     public ReportTableResponse monthlyReport(int months) {
         List<YearMonth> monthsList = ReportPeriods.trailingMonths(months);
-        Instant rangeStart = ReportPeriods.startOfDay(monthsList.getFirst().atDay(1));
-        Instant rangeEnd = ReportPeriods.startOfNextDay(monthsList.getLast().atEndOfMonth());
+        Instant rangeStart = ReportPeriods.startOfDay(monthsList.get(0).atDay(1));
+        Instant rangeEnd = ReportPeriods.startOfNextDay(monthsList.get(monthsList.size() - 1).atEndOfMonth());
         Map<YearMonth, List<WeSaleTransaction>> txnsByMonth = salesInRange(rangeStart, rangeEnd).stream()
                 .collect(Collectors.groupingBy(t -> YearMonth.from(t.getOccurredAt().atZone(ZONE).toLocalDate())));
         Map<YearMonth, List<WeSaleLineItemRepository.SaleLineProjection>> linesByMonth = lineItemsInRange(rangeStart, rangeEnd).stream()
